<resources>
    <string name="app_name">ShareWork</string>

    //toolbar_title
    <string name="sign_in_sign_up">로그인/회원가입</string>
    <string name="sign_up">회원가입</string>

    //membership
    <string name="phone_number">휴대폰번호</string>
    <string name="certification_number">인증번호</string>
    <string name="certification">인증</string>
    <string name="success_send">전송 완료</string>
    <string name="name">이름</string>
    <string name="resident_number">주민등록번호</string>
    <string name="email">이메일</string>

    <string name="title_notice">알림</string>
    <string name="title_ok">확인</string>
    <string name="title_cancel">취소</string>

    <string name="message_write_phone_number">휴대폰 번호를 입력해 주세요.</string>
    <string name="message_write_certification">인증 번호를 입력해 주세요.</string>
    <string name="message_write_resident_number">주민등록번호를 입력해 주세요.</string>
    <string name="message_wrong_resident_number">잘못된 주민등록번호 입니다.</string>
    <string name="message_wrong_email">잘못된 이메일 입니다.</string>
    <string name="message_not_valid_phone_number">올바른 휴대폰 번호가 아닙니다.</string>
    <string name="message_write_name">이름을 입력해 주세요.</string>
    <string name="message_write_resident">앞 6자리리</string>
    <string name="message_write_email">이메일을 입력해 주세요.</string>
    <string name="message_time_out">시간 초과</string>

    <string name="button_sign_up">동의하고 시작하기</string>


    // worker home
    <string name="title_search_location">어느지역에서 일하고 싶으신가요?</string>
</resources>