<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sign_in"
            type="com.hampson.sharework.ui.membership.sign_up.SignUpActivity" />
    </data>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:toolbar="@{1}" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:fitsSystemWindows="true"
                android:paddingTop="32dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="@string/name"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:hint="@string/message_write_name"
                        android:background="@drawable/background_focus_in_64d8d1_focus_out_dddddd"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textSize="14dp"
                        android:inputType="text"
                        android:textColor="#000000" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="@string/resident_number"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextResident"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:hint="@string/message_write_resident"
                        android:background="@drawable/background_focus_in_64d8d1_focus_out_dddddd"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textSize="14dp"
                        android:inputType="number"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="-" />

                    <EditText
                        android:id="@+id/editTextGender"
                        android:layout_width="32dp"
                        android:layout_height="48dp"
                        android:background="@drawable/background_focus_in_64d8d1_focus_out_dddddd"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:maxLength="1"
                        android:inputType="number"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_baseline_fiber_manual_record_12" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_baseline_fiber_manual_record_12" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_baseline_fiber_manual_record_12" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_baseline_fiber_manual_record_12" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_baseline_fiber_manual_record_12" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_baseline_fiber_manual_record_12" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="@string/email"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:hint="@string/message_write_email"
                        android:background="@drawable/background_focus_in_64d8d1_focus_out_dddddd"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textSize="14dp"
                        android:inputType="textEmailAddress"
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:background="#64d8d1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_sign_up"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>
</layout>